--- a/algorithms/crar/config.yaml
+++ b/algorithms/crar/config.yaml
@@ -49,16 +49,17 @@ SimpleMaze:
   max_epochs: 50
   batch_size: 32
   abstract_state_dim: 2
+  lr: !!python/float 1e-4
   optimizer:
-    name: RMSprop
-    params: {lr: !!python/float 1e-2, weight_decay: 0.9, eps: !!python/float 1e-4}
+    name: Adam
+    params: {lr: !!python/float 1e-4}
     grad_clip_norm: 1.0
     # qnet_lr: !!python/float 5e-4
     # encoder_lr: !!python/float 5e-4
   gamma: 0.99
-  sync_rate: 100 # freeze interval
+  sync_rate: 1000 # freeze interval
   replay_size: 1000000
-  warm_start_size: 20000
+  warm_start_size: 200000
   eps_last_frame: 1000
   eps_start: 1.0
   eps_end: 1.0  # Random actions
